<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="weatherLocation"
            type="com.patikadev.mvvmsample.db.entity.WeatherLocation"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            app:strokeColor="#F44336"
            app:strokeWidth="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Cloud"
                    android:textAlignment="center"
                    android:textColor="@color/weather_color"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/cloudy_weather_11_1147979" />

                <TextView
                    android:id="@+id/celcius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/celcius"
                    android:textAlignment="center"
                    android:textColor="@color/temperature_color"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/fahrenheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/fahrenheit"
                    android:textAlignment="center"
                    android:textColor="@color/temperature_color2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/feelslike_celcius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/feels_like_celcius"
                    android:textAlignment="center"
                    android:textColor="@color/temperature_color"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/feelslike_fahrenheit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feels_like_fahrenheit"
                    android:textAlignment="center"
                    android:textColor="#FFA000"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>